k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-node
  labels:
    app: demo-node
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-node
  template:
    metadata:
      labels:
        app: demo-node
    spec:
      containers:
        - name: demo-node
          image: msshoaib2255457/nodejenkinstest:latest
          ports:
            - containerPort: "3000"
