k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: demo-node-svc
spec:
  selector:
    app: demo-node
  ports:
    - portocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
